fix CLI screen being too small on mobile

--- a/src/components/HomepageCLI/styles.module.css
+++ b/src/components/HomepageCLI/styles.module.css
@@ -1,5 +1,5 @@
 .cliImage {
-  max-width: 55%;
+
   height: auto;
   margin-bottom: 1rem;
   font-size: 0.9rem;
